migration-result/docs/ver/13.x/server-access/guides/jetbrains-sftp.mdx
---
title: JetBrains SFTP
description: How to use a JetBrains IDE to manipulate files on a remote host with Teleport
h1: SFTP with JetBrains IDE
version: '13.x'
---

JetBrain's IDEs, like PyCharm, GoLand, and IntelliJ, allow browsing, copying, and editing files on a remote server
using the SFTP protocol. You can integrate Teleport with your IDE so you can copy files to and from a remote
machine without using a third-party client.

This guide explains how to use Teleport and a JetBrains IDE to access files with SFTP.

## Prerequisites

<Tabs>
  <Tab title="Teleport Community Edition">
    - A running Teleport cluster. For details on how to set this up, see our
      [Getting Started](/docs/ver/13.x/index) guide.

    - The `tctl` admin tool and `tsh` client tool version >= 13.4.16.

      ```code
      $ tctl version
      # Teleport v13.4.16 go1.21

      $ tsh version
      # Teleport v13.4.16 go1.21
      ```

      See [Installation](/docs/ver/13.x/installation) for details.

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```code
    $ tctl version
    # Teleport v13.4.16 go1.21
      
    $ tsh version
    # Teleport v13.4.16 go1.21
    ```
  </Tab>

  <Tab title="Teleport Team">
    - A Teleport Team account. If you don't have an account, sign
      up to begin your [free trial](https://goteleport.com/signup/).

    - The Enterprise `tctl` admin tool and `tsh` client tool, version >= 14.3.6.

      You can download these tools from the [Cloud Downloads page](/docs/ver/13.x/choose-an-edition/teleport-cloud/downloads).

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```code
    $ tctl version
    # Teleport Enterprise v14.3.6 go1.21
      
    $ tsh version
    # Teleport v14.3.6 go1.21
    ```
  </Tab>

  <Tab title="Teleport Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see our Enterprise
      [Getting Started](/docs/ver/13.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >=
      13.4.16, which you can download by visiting your [Teleport
      account](https://teleport.sh).

      ```code
      $ tctl version
      # Teleport Enterprise v13.4.16 go1.21

      $ tsh version
      # Teleport v13.4.16 go1.21
      ```
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    - A Teleport Enterprise Cloud account. If you do not have one, visit the [signup
      page](https://goteleport.com/signup/) to begin a free trial of Teleport Team
      and upgrade to Teleport Enterprise Cloud.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 14.3.6.
      You can download these tools from the [Cloud Downloads page](/docs/ver/13.x/choose-an-edition/teleport-cloud/downloads).

      ```code
      $ tctl version
      # Teleport Enterprise v14.3.6 go1.21

      $ tsh version
      # Teleport v14.3.6 go1.21
      ```
  </Tab>
</Tabs>

- JetBrains IDE like PyCharm, IntelliJ, GoLand etc. See [Products](https://www.jetbrains.com/products/#type=ide) for a full list of JetBrains IDEs.
- One or more Teleport SSH Service instances. If you have not yet done this,
  read the [Server Access Getting Started Guide](/docs/ver/13.x/server-access/getting-started) to
  learn how.

## Step 1/3. First-time setup

Configure your local SSH client to access servers, assigning the `--proxy` flag to the address of your Teleport Proxy Service (e.g., `mytenant.teleport.sh` for Teleport Cloud users).

```code
# log in to your proxy:
$ tsh login --proxy proxy.foo.example.com --user alice

# generate the OpenSSH config for the proxy:
$ tsh config --proxy proxy.foo.example.com
```

Append the resulting configuration snippet into your SSH config file located
in the path below:

<Tabs>
  <Tab title="Linux/MacOS">
    `$HOME/.ssh/config`
  </Tab>

  <Tab title="Windows">
    `%UserProfile%\.ssh\config`

    <Warning>
      If using PowerShell on Windows to write your SSH config, note that normal
      shell redirection may write the file with the incorrect encoding. To
      ensure it's written properly, try the following:

      ```code
      $ tsh.exe config | out-file .ssh\config -encoding utf8 -append
      ```
    </Warning>
  </Tab>
</Tabs>

You should be able to connect to the desired server using the following command, replacing `user` with the username you would like to assume on the server:

```code
$ ssh user@[server name].[cluster name]
```

<Accordion title="Teleport Cloud">
  The SSH config you generated earlier instructs your SSH client to run `tsh proxy ssh` to access a server in your Teleport cluster.
  However, running an `ssh` command against the Teleport Proxy Service at `yourtenant.teleport.sh` will result in an error.
</Accordion>

<Note>
  Include the port number for OpenSSH servers, by default `22`, or you can experience an error.
  See the [OpenSSH guide](/docs/ver/13.x/server-access/guides/openssh) for more information.
  Example connecting to a OpenSSH server:

  ```code
  $ ssh -p 22 user@[server name].[cluster name]
  ```
</Note>

## Step 2/3. Configure your JetBrains IDE

After opening your IDE go to `Tools` -> `Deployment` -> `Browse Remote Host`.

<img src="/assets/deployment-main-a63981a723.png" alt="Deployment" width="912" height="788" />

Then click the plus sign in the top-left corner to add a new server.

<img src="/assets/add-server-82ca91b23e.png" alt="Add server" width="551" height="259" />

Enter a name for your new server.

<img src="/assets/deployment-added-4c0b48874b.png" alt="New Deployment" width="912" height="788" />

Click the three dots next to `SSH configuration` as in the picture above.

<img src="/assets/ssh-configurations-3e735e8866.png" alt="SSH Configuration" width="944" height="815" />

Create a new configuration by clicking the plus sign on the top left and providing:

- `Host` - name of the Teleport server.
- `Port` - the Teleport server's SSH port (`3022` by default or `22` for OpenSSH servers).
- `Username` - the system username.

As an `Authentication type` pick `OpenSSH config and authentication agent`.
Next, you can click `Test Connection`.

<img src="/assets/successfully-connected-24e8ad5c7f.png" alt="Successfully Connected" width="416" height="188" />

## Step 3/3. Browse a remote host

After closing the SSH configuration window, you should see `Remote Host` menu in your IDE.

<img src="/assets/browse-window-62512e223d.png" alt="Browse window" width="2079" height="1349" />

<Note>
  Teleport's certificates expire fairly quickly, after which SSH
  attempts will fail with an error like the following:

  ```txt
  alice@proxy.foo.example.com: Permission denied (publickey).
  ERROR: exit status 255

  kex_exchange_identification: Connection closed by remote host
  ```

  When you see this error, re-run `tsh login` to refresh your local certificate.
</Note>

## Next steps

### Using OpenSSH clients

This guide makes use of `tsh config`; refer to the
[dedicated guide](/docs/ver/13.x/server-access/guides/openssh) for additional information.

## Further reading

- [JetBrains - Create a remote server configuration](https://www.jetbrains.com/help/idea/creating-a-remote-server-configuration.html#overload)
